# pandoc-plantuml-filter

./: .gitignore  LICENSE  README.md  pandoc_plantuml_filter.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml  main.yml
tests/: sample.md  sample_latex_uml.md  test_integration.py  test_unit.py
tests/testdata/: single-diagram-reference.md  single-diagram-with-config.md  single-diagram-with-filename-and-subdirectory.md  single-diagram-with-filename-without-subdirectory.md  single-diagram-with-meta.md  single-diagram.md
