[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pandoc-plantuml-filter"
authors = [
    {name = "Timo Furrer", email = "tuxtimo@gmail.com"},
]
description = "Pandoc filter for PlantUML code blocks"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["plantuml", "pandoc-filter", "pandoc"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandocfilters",
]
dynamic = ["version"]

[project.scripts]
pandoc-plantuml = "pandoc_plantuml_filter:main"

[tool.setuptools_scm]
